# benchmark-wrapper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  setup.cfg
requirements/docs/: py36-requirements.txt  py37-requirements.txt  py38-requirements.txt  py39-requirements.txt
requirements/install/: py36-requirements.txt  py37-requirements.txt  py38-requirements.txt  py39-requirements.txt
requirements/py36-reqs/: docs.txt  install.txt  tests.txt
requirements/py37-reqs/: docs.txt  install.txt  tests.txt
requirements/py38-reqs/: docs.txt  install.txt  tests.txt
requirements/py39-reqs/: docs.txt  install.txt  tests.txt
requirements/tests/: py36-requirements.txt  py37-requirements.txt  py38-requirements.txt  py39-requirements.txt
snafu/: registry.py  run_snafu.py
snafu/benchmarks/pbench/: Dockerfile  Dockerfio  Dockerperf  __init__.py  pbench.py
snafu/collectors/: __init__.py  _collector.py  _load_collectors.py  collector_factory.py  pbench.py  sample_map.json
snafu/collectors/pbench/: __init__.py  pbench.py  pbench_sample.cfg
snafu/pbench_wrapper/: Dockerfile  pbench_wrapper.py  trigger_pbench.py
snafu/smallfile_wrapper/: Dockerfile
snafu/utils/: wrapper_factory.py
