[metadata]
name = snafu
description = To store benchmark results in elasticsearch for long term investigations.
author = red-hat-performance
author_email = perf-dept@redhat.com
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
version = file:version.txt
home_page = https://github.com/cloud-bulldozer/{name}

[options]
zip_safe = False
packages = find:
include_package_data = True
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = dataclasses; configargparse; configparser; elasticsearch>=7.0.0,<7.14.0; statistics; numpy; pyyaml; requests; redis; python-dateutil>=2.7.3; prometheus_api_client; scipy; openshift==0.11; kubernetes==11; setuptools>=40.3.0; boto3; flent; importlib_metadata; kafka-python; ttp
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6

[options.extras_require]
docs =
    IPython
    ipykernel
    myst-parser
    nbsphinx
    notebook
    pandoc
    sphinx-rtd-theme
    sphinx<4
tests =
    pytest
    pytest-cov
testsci =
    tox

[options.entry_points]
console_scripts =
    run_snafu = snafu.run_snafu:main

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Package is pure-python
universal = 1
